# peff_uniprot_fetcher

./: .gitignore  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  try.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: app.js  index.html  peff_uniprot_fetcher-0.1.0-py3-none-any.whl  worker.js
scripts/: human_proteome_peff.py  mod_counts.py  ptm_stats.py
src/peff_uniprot_fetcher/: __init__.py  _annotations.py  _builder.py  _cli.py  _client.py  _config.py  _fasta.py  _gff.py  _ptm.py  _web.py
tests/: test_annotations.py  test_basic.py  test_cli.py  test_fasta.py  test_gff.py  test_ptm.py
