[project]
name = "peff_uniprot_fetcher"
version = "0.1.0"
description = "Fetch UniProt protein data and generate PEFF (PSI Extended FASTA Format) files."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["proteomics", "bioinformatics", "uniprot", "peff", "fasta", "ptm"]
dependencies = [
    "httpx>=0.27",
    "pefftacular",
    "psimodpy",
    "unimodpy",
    "uniprotptmpy",
]
authors = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
maintainers = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
fasta-to-peff = "peff_uniprot_fetcher._cli:fasta_to_peff_cli"
fetch-peff = "peff_uniprot_fetcher._cli:fetch_peff_cli"
download-uniprot = "peff_uniprot_fetcher._cli:download_uniprot_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peff_uniprot_fetcher"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

